--- a/WebRoot/WEB-INF/classes/db.properties
+++ b/WebRoot/WEB-INF/classes/db.properties
@@ -1,8 +1,4 @@
 db.driverClassName=com.mysql.jdbc.Driver
-<<<<<<< HEAD
-db.url=jdbc\:mysql\://www.iamspring.cn\:3306/jingpinke?characterEncoding\=UTF-8
-=======
-db.url=jdbc\:mysql\://www.iamspring\:3306/jingpinke?characterEncoding\=UTF-8
->>>>>>> branch 'master' of https://github.com/903781797/biyesheji.git
+db.url=jdbc\:mysql\://127.0.0.1\:3306/jingpinke?characterEncoding\=UTF-8
 db.username=root
 db.password=spring
